# AI_FastTrack

./: .env.example  .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  presentation.html  pyproject.toml
.claude/: settings.local.json
.claude/agents/: test-writer.md
.claude/rules/: fastapi.md  langchain-langgraph.md  llamaindex.md  ragas.md
.claude/skills/check-stage-ready/: SKILL.md
.claude/skills/sync-framework-rules/: SKILL.md
.github/workflows/: ci.yml
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Documents/: Raw Rules.txt  general.md  stage1.md  stage2.md  stage3.md  stage4.md
app/: app.py
app/SQLite/: db.py  schema.md  seed_bookings.json  seed_db.py  seed_spots.json
app/agent/: agent.py  agent_admin.py  agent_and_tools.py  graph.py
app/agent/Utils/: SQLquery.py  nodes.py  nodes_admin.py  state.py  tools.py
app/api/: routes.py
app/db/faiss_vector_store/: default__vector_store.json  docstore.json  index_store.json
app/frontend/: admin.html  chat.html
app/mcp/: mcp_client.py  mcp_server.py
app/rag/: indexing.py  retriever.py  seed_parking_info.md
app/rag/faiss_vector_store/: default__vector_store.json  docstore.json  index_store.json
docs/: stage1-plan.md
docs/superpowers/plans/: 2026-05-22-stage1-rag-chatbot.md
docs/superpowers/specs/: 2026-05-22-parking-chatbot-design.md
eval/: dataset.py  eval_rag.py  report.py  results.csv  results.html
load_tests/: README.md  locustfile.py
scrn_Presentation/: CityPark_Stage1.pptx  make_pptx.py
tests/: test_api.py  test_mcp.py  test_nodes.py  test_nodes_admin.py  test_retriever.py  test_tools.py
