[project]
name = "ai-fasttrack"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "ipython>=9.13.0",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph[sqlite]>=1.2.1",
    "llama-index>=0.14.22",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-faiss>=0.6.0",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
