[project]
name = "ai-fasttrack"
version = "0.1.0"
description = "Parking space reservation chatbot using LangChain, LangGraph, RAG, and FastAPI"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "fastapi>=0.136.1",
    "langchain>=1.3.1",
    "langchain-anthropic>=1.4.3",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.2",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langgraph-cli[inmem]>=0.4.26",
    "langgraph>=1.2.1",
    "llama-index>=0.14.22",
    "llama-index-embeddings-huggingface>=0.7.0",
    "llama-index-vector-stores-faiss>=0.6.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.47.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
]
